--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/slick/slick.css">
-    <link rel="stylesheet" href="/slick/slick-theme.css">
+    <link rel="stylesheet" href="/vilni/slick/slick.css">
+    <link rel="stylesheet" href="/vilni/slick/slick-theme.css">
 
-    <script src="/js/jquery-3.6.0.min.js"></script>
-    <script src="/slick/slick.min.js"></script>
-    <script src="/email/js-email/popper.min.js"></script>
-    <script src="/email/js-email/bootstrap.min.js"></script>
-    <script src="/email/js-email/jquery.validate.min.js"></script>
-    <script src="/email/js-email/main.js"></script>
+    <script src="/vilni/js/jquery-3.6.0.min.js"></script>
+    <script src="/vilni/slick/slick.min.js"></script>
+    <script src="/vilni/email/js-email/popper.min.js"></script>
+    <script src="/vilni/email/js-email/bootstrap.min.js"></script>
+    <script src="/vilni/email/js-email/jquery.validate.min.js"></script>
+    <script src="/vilni/email/js-email/main.js"></script>
     
-    <script src="/js/main.js"></script>
-    <link rel="stylesheet" href="/css/style.css">
+    <script src="/vilni/js/main.js"></script>
+    <link rel="stylesheet" href="/vilni/css/style.css">
 
-    <link rel="stylesheet" href="/email/css-email/style-email.css">
-    <link rel="stylesheet" href="/email/css-email/bootstrap.min.css">
+    <link rel="stylesheet" href="/vilni/email/css-email/style-email.css">
+    <link rel="stylesheet" href="/vilni/email/css-email/bootstrap.min.css">
 
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
         <div class="main">
             <div id="open" class="header">
             <div id="close" class="header__container">
-                <a href="" class="header__logo"> <img src="/img/header/Logo.png" alt="logo"></a>
+                <a href="" class="header__logo"> <img src="/vilni/img/header/Logo.png" alt="logo"></a>
                 <div class="header__menu menu">
                     <nav class="menu__body">
                         <ul class="menu__list">
@@ -61,7 +61,7 @@
                         <a href="#about-us" class="button first__block-button"> Про нас</a>
                     </div>
                 </div>
-                <img src="/img/1-block/україна3 1.png" alt="ukraine-border" class="ukraine-border">
+                <img src="/vilni/img/1-block/україна3 1.png" alt="ukraine-border" class="ukraine-border">
             </div>
             </section>
             <section id="about-us" class="about-us">
@@ -97,7 +97,7 @@
                  <div class="statistics-items">
                      <div class="statistic-item">
                          <div class="statistics-item-icon">
-                             <img src="/img/statistics/generous (1) 1.png" alt="icon1">
+                             <img src="/vilni/img/statistics/generous (1) 1.png" alt="icon1">
                          </div>
                          <div class="statistics-item-content">
                              <div class="statistics-item-title">
@@ -112,7 +112,7 @@
                  <div class="statistics-items">
                     <div class="statistic-item">
                         <div class="statistics-item-icon">
-                            <img src="/img/statistics/generous (1) 1.png" alt="icon1">
+                            <img src="/vilni/img/statistics/generous (1) 1.png" alt="icon1">
                         </div>
                         <div class="statistics-item-content">
                             <div class="statistics-item-title">
@@ -129,7 +129,7 @@
                 <div class="statistics-items">
                     <div class="statistic-item">
                         <div class="statistics-item-icon">
-                            <img src="/img/statistics/generous (1) 1.png" alt="icon1">
+                            <img src="/vilni/img/statistics/generous (1) 1.png" alt="icon1">
                         </div>
                         <div class="statistics-item-content">
                             <div class="statistics-item-title">
@@ -144,7 +144,7 @@
                 <div class="statistics-items">
                     <div class="statistic-item">
                         <div class="statistics-item-icon">
-                            <img src="/img/statistics/generous (1) 1.png" alt="icon1">
+                            <img src="/vilni/img/statistics/generous (1) 1.png" alt="icon1">
                         </div>
                         <div class="statistics-item-content">
                             <div class="statistics-item-title">
@@ -161,7 +161,7 @@
                 <div class="statistics-items">
                     <div class="statistic-item">
                         <div class="statistics-item-icon">
-                            <img src="/img/statistics/generous (1) 1.png" alt="icon1">
+                            <img src="/vilni/img/statistics/generous (1) 1.png" alt="icon1">
                         </div>
                         <div class="statistics-item-content">
                             <div class="statistics-item-title">
@@ -176,7 +176,7 @@
                 <div class="statistics-items">
                     <div class="statistic-item">
                         <div class="statistics-item-icon">
-                            <img src="/img/statistics/generous (1) 1.png" alt="icon1">
+                            <img src="/vilni/img/statistics/generous (1) 1.png" alt="icon1">
                         </div>
                         <div class="statistics-item-content">
                             <div class="statistics-item-title">
@@ -200,7 +200,7 @@
                     <div class="team__items slider team__slider">
                         <div class="team__item-container  team__item">
                             <div class="photo">
-                                <img class="team-photo" src="/img/team/stock-photo-silhouette-man-looking-camera-isolated.jfif" alt="photo">
+                                <img class="team-photo" src="/vilni/img/team/stock-photo-silhouette-man-looking-camera-isolated.jfif" alt="photo">
                             </div>
                             <div class="item-content-block">
                                 <div class="item-title">
@@ -212,7 +212,7 @@
                             </div>
                         </div> <div class="team__item-container team__item">
                             <div class="photo">
-                                <img class="team-photo" src="/img/team/stock-photo-silhouette-man-looking-camera-isolated.jfif" alt="photo">
+                                <img class="team-photo" src="/vilni/img/team/stock-photo-silhouette-man-looking-camera-isolated.jfif" alt="photo">
                             </div>
                             <div class="item-content-block">
                                 <div class="item-title">
@@ -225,7 +225,7 @@
                         </div>
                         <div class="team__item-container team__item">
                             <div class="photo">
-                                <img class="team-photo" src="/img/team/stock-photo-silhouette-man-looking-camera-isolated.jfif" alt="photo">
+                                <img class="team-photo" src="/vilni/img/team/stock-photo-silhouette-man-looking-camera-isolated.jfif" alt="photo">
                             </div>
                             <div class="item-content-block">
                                 <div class="item-title">
@@ -238,7 +238,7 @@
                         </div>
                         <div class="team__item-container team__item">
                             <div class="photo">
-                                <img class="team-photo" src="/img/team/stock-photo-silhouette-man-looking-camera-isolated.jfif" alt="photo">
+                                <img class="team-photo" src="/vilni/img/team/stock-photo-silhouette-man-looking-camera-isolated.jfif" alt="photo">
                             </div>
                             <div class="item-content-block">
                                 <div class="item-title">
@@ -251,7 +251,7 @@
                         </div>
                         <div class="team__item-container team__item">
                             <div class="photo">
-                                <img class="team-photo" src="/img/team/stock-photo-silhouette-man-looking-camera-isolated.jfif" alt="photo">
+                                <img class="team-photo" src="/vilni/img/team/stock-photo-silhouette-man-looking-camera-isolated.jfif" alt="photo">
                             </div>
                             <div class="item-content-block">
                                 <div class="item-title">
@@ -264,7 +264,7 @@
                         </div>
                         <div class="team__item-container team__item">
                             <div class="photo">
-                                <img class="team-photo" src="/img/team/stock-photo-silhouette-man-looking-camera-isolated.jfif" alt="photo">
+                                <img class="team-photo" src="/vilni/img/team/stock-photo-silhouette-man-looking-camera-isolated.jfif" alt="photo">
                             </div>
                             <div class="item-content-block">
                                 <div class="item-title">
@@ -320,32 +320,32 @@
                     <div class="report__items slider_2 report__slider">
                         <div class="report__item-container  report__item">
                             <div class="photo">
-                                <img class="report-photo" src="/img/report/big_441d7f43ead31df601a2dc864f5d8ec564d2e7ae.jpg" alt="photo">
+                                <img class="report-photo" src="/vilni/img/report/big_441d7f43ead31df601a2dc864f5d8ec564d2e7ae.jpg" alt="photo">
                             </div>                            
                         </div>
                         <div class="report__item-container  report__item">
                             <div class="photo">
-                                <img class="report-photo" src="/img/report/big_441d7f43ead31df601a2dc864f5d8ec564d2e7ae.jpg" alt="photo">
+                                <img class="report-photo" src="/vilni/img/report/big_441d7f43ead31df601a2dc864f5d8ec564d2e7ae.jpg" alt="photo">
                             </div>                            
                         </div> 
                         <div class="report__item-container  report__item">
                             <div class="photo">
-                                <img class="report-photo" src="/img/report/big_441d7f43ead31df601a2dc864f5d8ec564d2e7ae.jpg" alt="photo">
+                                <img class="report-photo" src="/vilni/img/report/big_441d7f43ead31df601a2dc864f5d8ec564d2e7ae.jpg" alt="photo">
                             </div>                            
                         </div> 
                         <div class="report__item-container  report__item">
                             <div class="photo">
-                                <img class="report-photo" src="/img/report/big_441d7f43ead31df601a2dc864f5d8ec564d2e7ae.jpg" alt="photo">
+                                <img class="report-photo" src="/vilni/img/report/big_441d7f43ead31df601a2dc864f5d8ec564d2e7ae.jpg" alt="photo">
                             </div>                            
                         </div> 
                         <div class="report__item-container  report__item">
                             <div class="photo">
-                                <img class="report-photo" src="/img/report/big_441d7f43ead31df601a2dc864f5d8ec564d2e7ae.jpg" alt="photo">
+                                <img class="report-photo" src="/vilni/img/report/big_441d7f43ead31df601a2dc864f5d8ec564d2e7ae.jpg" alt="photo">
                             </div>                            
                         </div> 
                         <div class="report__item-container  report__item">
                             <div class="photo">
-                                <img class="report-photo" src="/img/report/big_441d7f43ead31df601a2dc864f5d8ec564d2e7ae.jpg" alt="photo">
+                                <img class="report-photo" src="/vilni/img/report/big_441d7f43ead31df601a2dc864f5d8ec564d2e7ae.jpg" alt="photo">
                             </div>                            
                         </div> 
                         
