--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <section class="contact">
                 <div class="contact__container">
                     <div class="contact__email-logo">                       
-                            <img src="/img/header/Logo.png" alt="Logo">                      
+                            <img src="/vilni/img/header/Logo.png" alt="Logo">                      
                     </div>
                     <div class="contact-content">
                         <div class="email-form">
