--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             </div>
                             <div class="item-content-block">
                                 <div class="item-title">
-                                    Barak Obama
+                                    Name surname
                                 </div>
                                 <div class="item-discription">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse ullam, in voluptatum laudantium voluptates minus maiores debitis dolor dolores ratione expedita nostrum ipsa similique doloremque? Fugit ipsam nemo error?
@@ -216,7 +216,7 @@
                             </div>
                             <div class="item-content-block">
                                 <div class="item-title">
-                                    Barak Obama
+                                    Name surname
                                 </div>
                                 <div class="item-discription">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse ullam, in voluptatum laudantium voluptates minus maiores debitis dolor dolores ratione expedita nostrum ipsa similique doloremque? Fugit ipsam nemo error?
@@ -229,7 +229,7 @@
                             </div>
                             <div class="item-content-block">
                                 <div class="item-title">
-                                    Barak Obama
+                                     Name surname
                                 </div>
                                 <div class="item-discription">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse ullam, in voluptatum laudantium voluptates minus maiores debitis dolor dolores ratione expedita nostrum ipsa similique doloremque? Fugit ipsam nemo error?
@@ -242,7 +242,7 @@
                             </div>
                             <div class="item-content-block">
                                 <div class="item-title">
-                                    Barak Obama
+                                    Name surname
                                 </div>
                                 <div class="item-discription">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse ullam, in voluptatum laudantium voluptates minus maiores debitis dolor dolores ratione expedita nostrum ipsa similique doloremque? Fugit ipsam nemo error?
@@ -255,7 +255,7 @@
                             </div>
                             <div class="item-content-block">
                                 <div class="item-title">
-                                    Barak Obama
+                                     Name surname
                                 </div>
                                 <div class="item-discription">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse ullam, in voluptatum laudantium voluptates minus maiores debitis dolor dolores ratione expedita nostrum ipsa similique doloremque? Fugit ipsam nemo error?
@@ -268,7 +268,7 @@
                             </div>
                             <div class="item-content-block">
                                 <div class="item-title">
-                                    Barak Obama
+                                     Name surname
                                 </div>
                                 <div class="item-discription">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse ullam, in voluptatum laudantium voluptates minus maiores debitis dolor dolores ratione expedita nostrum ipsa similique doloremque? Fugit ipsam nemo error?
